API示例文档 拿用户查询接口举个例子 访问 http://code.google.com/p/bmybbs/wiki/ApiUserInfo

--- a/wiki/BMYAPI.wiki
+++ b/wiki/BMYAPI.wiki
@@ -97,12 +97,14 @@
 =访问授权限制=
 
 =请求参数=
+||*字段*||*必选*||*类型及范围*||*说明*||
 
 =注意事项=
 
 =返回结果=
 
 =字段说明=
+||*字段*||*类型*||*说明*||
 
 =其他=
 }}}
@@ -110,3 +112,4 @@
 ==变更日志==
 ||*日期*||*版本*||*作者*||*说明*||
 ||2012/08/29||v0.0.1||IronBlood||initial ci||
+||2012/08/30||v0.0.2||IronBlood||接口文档模板中加入说明表格||
